<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6597c1"
    android:orientation="vertical"
    tools:context="com.summons.tourmateapp.SignInActivity">

   <include layout="@layout/app_bar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:layout_weight="2"
        android:background="@drawable/box_round"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingStart="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/expenseDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="45dp"
                    android:background="@drawable/edit_text_round"
                    android:paddingLeft="10dp"
                    android:hint="@string/user_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"

                app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_text_round"
                    android:paddingLeft="10dp"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>



            <com.summons.tourmateapp.TextView.CustomButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/button_round"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:onClick="signIn"
                android:textColor="#ffffff"
                android:textSize="18sp"
                app:customButtonFont="timesbd.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/stayCheekBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stay_login"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <com.summons.tourmateapp.TextView.CustomButton
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registration"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/button_round"
            android:text="Sign Up Here"
            app:customButtonFont="timesbd.ttf"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>
