<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6597c1"
    android:orientation="vertical"
    tools:context="com.summons.tourmateapp.SignUpActivity">

    <include layout="@layout/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile_c" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Chose a Image"
                    android:id="@+id/choseTextView"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                        <EditText
                            android:id="@+id/fullNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/edit_text_round"
                            android:hint="Full Name"
                            android:paddingLeft="10dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                        <EditText
                            android:id="@+id/userNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/edit_text_round"
                            android:hint="User Name"
                            android:paddingLeft="10dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                        <EditText
                            android:id="@+id/passwordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/edit_text_round"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                        <EditText
                            android:id="@+id/eNumberEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/edit_text_round"
                            android:hint="Emergency Contact Number"
                            android:inputType="number"
                            android:paddingLeft="10dp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        app:hintTextAppearance="@style/Base.TextAppearance.AppCompat.Small">

                        <EditText
                            android:id="@+id/addressEditText"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/edit_text_round"
                            android:hint="@string/address"
                            android:paddingLeft="10dp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>



            </LinearLayout>

            <com.summons.tourmateapp.TextView.CustomButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="signUp"
                android:textColor="@android:color/white"
                android:text="@string/sign_up"
                android:background="@drawable/button_round"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="12dp"
                app:customButtonFont="timesbd.ttf" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>
